# Cabana_Pizza

./: .gitignore  APRESENTACAO-EXECUTIVA.md  DEPLOY-CONTROLADO.md  INFOS.MD  PLANO-BACKEND-PAINEL.md  README.md  index.html  package-lock.json  tailwind.config.ts  vercel.json  vite.config.ts
backend/: .env.example  README.md  alembic.ini  compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260427_0001_bootstrap_backend.py  20260429_0002_order_status_undo.py  20260429_0003_order_events.py  20260430_0004_enable_public_rls.py  20260430_0005_loyalty_redemptions.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  health.py  loyalty.py  menu.py  orders.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  admin_user.py  category.py  crust_flavor.py  crust_price.py  enums.py  loyalty_redemption.py  order.py  order_event.py  order_item.py  pizza_category_price.py  product.py  product_option.py
backend/app/schemas/: admin.py  loyalty.py  order.py
backend/app/services/: admin_auth.py  admin_catalog.py  admin_media.py  admin_orders.py  loyalty.py  menu_catalog.py  orders.py
backend/scripts/: bootstrap_admin.py  sync_menu_seed.py
src/: App.tsx  index.css
src/contexts/: menu-context.tsx
src/data/: menu.json  menu.ts
src/lib/: admin-api.ts  api-base-url.ts  delivery-coverage.ts  menu-api.ts  menu-search.ts  order-api.ts  order.ts  phone.ts  postal-code.ts  store-hours.ts
(+17 files in other folders)
